--- a/portafolio.html
+++ b/portafolio.html
@@ -172,71 +172,88 @@
       
     <!--Footer section-->
     <footer>
-      <a class="logo" href="">WebStudio</a>
       <div class="container">
-      <address>
         <ul>
           <li>
-            <a
-              class="contact"
-              href="https://www.google.com/maps/place/Calz.+Ticom%C3%A1n+50,+La+Laguna+Ticoman,+Gustavo+A.+Madero,+07340+Ciudad+de+México,+CDMX,+México"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Calz. Ticomán 500, Ciudad de México, CDMX, México</a
-            >
+            <a class="logo" href="">WebStudio</a>
+            <address>
+              <ul>
+                <li>
+                  <a
+                   class="contact"
+                   href="https://www.google.com/maps/place/Calz.+Ticom%C3%A1n+50,+La+Laguna+Ticoman,+Gustavo+A.+Madero,+07340+Ciudad+de+México,+CDMX,+México"
+                   target="_blank"
+                   rel="noopener noreferrer"
+                  >Calz. Ticomán 500, Ciudad de México, CDMX, México
+                  </a>
+                </li>
+  
+                <li>
+                  <a class="contact-channel" href="mailto:info@example.com"
+                    >info@example.com
+                  </a>
+                </li>
+  
+                <li>
+                  <a class="contact-channel" href="tel:+525555296000"
+                  >+52 55 5529 6000
+                  </a>
+                </li>
+              </ul>
+            </address>
           </li>
-
-          <li>
-            <a class="contact-channel" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-
-          <li>
-            <a class="contact-channel" href="tel:+525555296000"
-              >+52 55 5529 6000</a
-            >
-          </li>
-        </ul>
-      </address>
-
-      <aside>
-        <p>ENCUENTRENOS EN</p>
-        <ul>
-          <li>
-            <a href="#">
-              <svg class="icon">
-                <use href="./Images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li>
-            <a href="#">
-              <svg class="icon">
-                <use href="./Images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li>
-            <a href="#">
-              <svg class="icon">
-                <use href="./Images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li>
-            <a href="#">
-              <svg class="icon">
-                <use href="./Images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </aside>
-    </div>
-  </footer>
+        </ul> 
+          <aside>
+            <p>ENCUENTRENOS EN</p>
+            <ul>
+              <li>
+                <a href="#">
+                  <svg class="icon">
+                    <use href="./Images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+  
+              <li>
+                <a href="#">
+                  <svg class="icon">
+                    <use href="./Images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+  
+              <li>
+                <a href="#">
+                  <svg class="icon">
+                    <use href="./Images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+  
+              <li>
+                <a href="#">
+                  <svg class="icon">
+                    <use href="./Images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </aside>
+  
+          <form>
+            <p>SUSCRÍBASE AL BOLETÍN INFORMATICO</p>
+            <label class="footer-form_label">
+              <input class="footer-form_input" type="email" name="email" id="email" 
+              placeholder="Correo electrónico"/> 
+              <button class="button-primary footer-form_button" type="submit">
+                Suscribase
+                <svg class="footer-form_icon">
+                  <use href="./Images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </label>
+          </form>
+      </div>
+    </footer>
   </body>
 </html>
