--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </label>
 
           <label class="modal-form_checkoption" for="policy">
-            <input class="modal-form_checkbox" type="checkbox" name="policy" id="policy" />
+            <input class="modal-form_checkbox" type="checkbox" name="policy" id="policy" required />
             <span class="modal-form_box">
               <svg class="modal-form_iconcheck">
                 <use href="./Images/icons.svg#icon-checkmark"></use>
