--- a/portafolio.html
+++ b/portafolio.html
@@ -17,24 +17,24 @@
   </head>
 
   <body>
-    <!--Header section-->
-    <header class="page-header">
+    <!---------------Header section--------------->
+    <header class="header">
       <div class="container">
-        <nav>
-          <!--Logo-->
+        <nav class="navbar">
+          <!---------------Logo--------------->
           <a class="logo" href="./index.html">WebStudio</a>
-          <!--Menu-->
-          <ul class="nav-menu-list">
-            <li><a class="page" href="./index.html">Estudio</a></li>
-            <li><a class="page current" href="./portafolio.html">Portafolio</a></li>
-            <li><a class="page" href="">Contactos</a></li>
+          <!-----------------Menu--------------->
+          <ul class="navbar__list">
+            <li><a class="navbar__link navbar__link--current" href="./index.html">Estudio</a></li>
+            <li><a class="navbar__link" href="./portafolio.html">Portafolio</a></li>
+            <li><a class="navbar__link" href="">Contactos</a></li>
           </ul>
         </nav>
-        <!--Contacts-->
-        <ul class="contacts-menu-list">
+        <!---------------Contacts--------------->
+        <ul class="contacts">
           <li>
-            <a class="item" href="#">
-              <svg class="email-logo">
+            <a class="contacts__link" href="#">
+              <svg class="contacts__icon contacts__icon--email">
                 <use href="./Images/icons.svg#icon-email"></use>
               </svg>
               info@devstudio.com
@@ -42,8 +42,8 @@
           </li>
         
           <li>
-            <a class="item" href="#">
-              <svg class="phone-logo">
+            <a class="contacts__link" href="#">
+              <svg class="contacts__icon contacts__icon--phone">
                 <use href="./Images/icons.svg#icon-smartphone"></use>
               </svg>
               +52 55 5529 6000
