--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <section class="section section__item">
         <h2>A qué nos dedicamos</h2>
         <div class="container">
-          <ul class="section">
+          <ul class="">
             <li>
               <img src="./Images/image1.jpg" alt="iPad with keyboard over a wood table" width="373"/>
               <p>APLICACIONES DE ESCRITORIO</p>
