--- a/index.html
+++ b/index.html
@@ -190,66 +190,66 @@
       </section>
 
       <!--------------- What we do section --------------->
-      <section class="section section__item">
+      <section class="section activities__section">
         <h2>A qué nos dedicamos</h2>
         <div class="container">
-          <ul class="">
-            <li>
-              <img src="./Images/image1.jpg" alt="iPad with keyboard over a wood table" width="373"/>
-              <p>APLICACIONES DE ESCRITORIO</p>
+          <ul class="activities__list">
+            <li class="activities__item">
+              <img class="activities__image" src="./Images/image1.jpg" alt="iPad with keyboard over a wood table" width="373"/>
+              <p class="activities__title">APLICACIONES DE ESCRITORIO</p>
             </li>
 
-            <li>
-              <img src="./Images/image2.jpg" alt="Person with cellphone and laptop" width="373"/>
-              <P>APLICACIONES MÓVILES</P>
+            <li class="activities__item">
+              <img class="activities__image" src="./Images/image2.jpg" alt="Person with cellphone and laptop" width="373"/>
+              <P class="activities__title">APLICACIONES MÓVILES</P>
             </li>
 
-            <li>
-              <img src="./Images/image3.jpg" alt="iPad with palette of colours" width="373"/>
-              <p>SOLUCIONES DE DISEÑO</p>
+            <li class="activities__item">
+              <img class="activities__image" src="./Images/image3.jpg" alt="iPad with palette of colours" width="373"/>
+              <p class="activities__title">SOLUCIONES DE DISEÑO</p>
             </li>
           </ul>
         </div>
       </section>
 
-      <!--Our Team section-->
-      <section class="section team-section">
+      <!--------------- Our Team section --------------->
+      <section class="section team__section">
         <h2>Nuestro Equipo</h2>
         <div class="container">
-          <!--Cards-->
-          <ul class="team-cards">
-            <li>
+          <!--------------- Cards --------------->
+          <ul class="team__cards">
+            <li class="team__list">
               <img src="./Images/team1.jpg" alt="First member" width="270" />
-              <h3>Andrés Cubo</h3>
-              <p>Diseñador de Productos</p>
-              <ul>
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+              <h3 class="team__member">Andrés Cubo</h3>
+              <p class="team__role">Diseñador de Productos</p>
+              <ul class="socialMedia">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -257,38 +257,38 @@
               </ul>
             </li>
 
-            <li>
+            <li class="team__list">
               <img src="./Images/team2.jpg" alt="Second member" width="270" />
-              <h3>Carla Palacios</h3>
-              <p>Desarrolladora Frontend</p>
-              <ul>
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+              <h3 class="team__member">Carla Palacios</h3>
+              <p class="team__role">Desarrolladora Frontend</p>
+              <ul class="socialMedia">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -296,38 +296,38 @@
               </ul>
             </li>
 
-            <li>
+            <li class="team__list">
               <img src="./Images/team3.jpg" alt="Third member" width="270" />
-              <h3>Mario Dorado</h3>
-              <p>Marketing</p>
-              <ul>
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+              <h3 class="team__member">Mario Dorado</h3>
+              <p class="team__role">Marketing</p>
+              <ul class="socialMedia">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -335,38 +335,38 @@
               </ul>
             </li>
 
-            <li>
+            <li class="team__list">
               <img src="./Images/team4.jpg" alt="Fourth member" width="270" />
-              <h3>Pablo Mijangos</h3>
-              <p>Diseñador UI</p>
-              <ul>
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+              <h3 class="team__member">Pablo Mijangos</h3>
+              <p class="team__role">Diseñador UI</p>
+              <ul class="socialMedia">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li>
-                  <a href="#">
-                    <svg class="icon">
+                <li class="socialMedia__list">
+                  <a class="socialMedia__link" href="#">
+                    <svg class="socialMedia__icon">
                       <use href="./Images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -376,54 +376,54 @@
           </ul>
         </div>
       </section>
-      <!-- Regular Clients Section -->
-      <section class="section clients-section">
+      <!--------------- Regular Clients Section --------------->
+      <section class="section">
         <h2>Clientes Regulares</h2>
         <div class="container">
-          <ul>
-            <li>
-                <a href="#">
-                  <svg class="icon-client">
+          <ul class="clients">
+            <li class="clients__list">
+                <a class="clients__link" href="#">
+                  <svg class="clients__icon">
                     <use href="./Images/icons.svg#icon-client1"></use>
                   </svg>
                 </a>             
             </li>
 
-            <li>
-                <a href="#">
-                  <svg class="icon-client">
+            <li class="clients__list">
+                <a class="clients__link" href="#">
+                  <svg class="clients__icon">
                     <use href="./Images/icons.svg#icon-client2"></use>
                   </svg>
                 </a>                           
             </li>
 
-            <li>
-              <a href="#">
-                <svg class="icon-client">
+            <li class="clients__list">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon">
                   <use href="./Images/icons.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
 
-            <li>
-              <a href="#">
-                <svg class="icon-client">
+            <li class="clients__list">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon">
                   <use href="./Images/icons.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
 
-            <li>
-              <a href="#">
-                <svg class="icon-client">
+            <li class="clients__list">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon">
                   <use href="./Images/icons.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
 
-            <li>
-              <a href="#">
-                <svg class="icon-client">
+            <li class="clients__list">
+              <a class="clients__link" href="#">
+                <svg class="clients__icon">
                   <use href="./Images/icons.svg#icon-client6"></use>
                 </svg>
               </a>
