--- a/portafolio.html
+++ b/portafolio.html
@@ -25,8 +25,8 @@
           <a class="logo" href="./index.html">WebStudio</a>
           <!-----------------Menu--------------->
           <ul class="navbar__list">
-            <li><a class="navbar__link navbar__link--current" href="./index.html">Estudio</a></li>
-            <li><a class="navbar__link" href="./portafolio.html">Portafolio</a></li>
+            <li><a class="navbar__link" href="./index.html">Estudio</a></li>
+            <li><a class="navbar__link navbar__link--current" href="./portafolio.html">Portafolio</a></li>
             <li><a class="navbar__link" href="">Contactos</a></li>
           </ul>
         </nav>
@@ -56,9 +56,9 @@
     <!--Main Content Section-->
     <main>
       <!-- Menu Tabs-->
-      <section class="section portfolio-section">
+      <section class="section">
         <div class="container">
-          <ul class="menu">
+          <ul class="portfolio">
             <li><button class="button-current" type="button">Todo</button></li>
             <li><button class="button" type="button">Sitios-Web</button></li>
             <li><button class="button" type="button">Aplicaciones</button></li> 
