--- a/portafolio.html
+++ b/portafolio.html
@@ -53,17 +53,17 @@
       </div>  
     </header>
 
-    <!--Main Content Section-->
+    <!--------------- Main Content Section --------------->
     <main>
       <!-- Menu Tabs-->
       <section class="section">
         <div class="container">
-          <ul class="portfolio">
-            <li><button class="button-current" type="button">Todo</button></li>
-            <li><button class="button" type="button">Sitios-Web</button></li>
-            <li><button class="button" type="button">Aplicaciones</button></li> 
-            <li><button class="button" type="button">Diseño</button></li>
-            <li><button class="button" type="button">Marketing</button></li>
+          <ul class="portfolio__menu">
+            <li><button class="portfolio__button portfolio__button--current" type="button">Todo</button></li>
+            <li><button class="portfolio__button" type="button">Sitios-Web</button></li>
+            <li><button class="portfolio__button" type="button">Aplicaciones</button></li> 
+            <li><button class="portfolio__button" type="button">Diseño</button></li>
+            <li><button class="portfolio__button" type="button">Marketing</button></li>
           </ul>
           <!--Cards list-->
           <ul class="cards">
