--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
       </section>
     </main>
 
-    <!--Footer section-->
-    <footer>
+    <!--------------- Footer section --------------->
+    <footer class="footer">
       <div class="container">
         <ul>
           <li>
