--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
+    
     <title>WebStudio</title>
   </head>
 
@@ -66,6 +68,7 @@
 
     <!--------------- Main Content Section --------------->
     <main>
+
       <!--------------- Modal Window --------------->
       <section class="backdrop is-hidden" data-backdrop>
         <form class="modal__form is-hidden" data-modal>
@@ -121,6 +124,7 @@
           </button>
         </form>
       </section>
+
       <!--------------- Hero Section --------------->
       <section class="hero">
         <h1 class="hero__title">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
@@ -376,6 +380,7 @@
           </ul>
         </div>
       </section>
+      
       <!--------------- Regular Clients Section --------------->
       <section class="section">
         <h2>Clientes Regulares</h2>
@@ -436,11 +441,11 @@
     <!--------------- Footer section --------------->
     <footer class="footer">
       <div class="container">
-        <ul class="address">
+        <ul>
           <li>
             <a class="logo" href="">WebStudio</a>
             <address>
-              <ul class="address">
+              <ul>
                 <li>
                   <a
                     class="address__link"
