--- a/portafolio.html
+++ b/portafolio.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/main.min.css"/>
     
     <title>Portafolio</title>
   </head>
@@ -173,11 +174,11 @@
     <!-------------- Footer section -------------->
     <footer class="footer">
       <div class="container">
-        <ul class="address">
+        <ul>
           <li>
             <a class="logo" href="">WebStudio</a>
             <address>
-              <ul class="address">
+              <ul>
                 <li>
                   <a
                     class="address__link"
